# homies_gaming_backend

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: release-client.yml  release.yml
client/: Makefile  go.mod  go.sum  main.go
client/mpv/macos/lib/: libSDL2-2.0.0.dylib  libSvtAv1Enc.3.dylib  libX11.6.dylib  libXau.6.dylib  libXdmcp.6.dylib  libaom.3.dylib  libarchive.13.dylib  libaribb24.0.dylib  libass.9.dylib  libavdevice.61.dylib  libavfilter.10.dylib  libavformat.61.dylib  libavutil.59.dylib  libb2.1.dylib  libbluray.2.dylib  libbrotlicommon.1.dylib  libbrotlidec.1.dylib  libbrotlienc.1.dylib  libcjson.1.dylib  libdav1d.7.dylib  libfontconfig.1.dylib  libfreetype.6.dylib  libfribidi.0.dylib  libgif.dylib  libglib-2.0.0.dylib  libgmp.10.dylib  libgnutls.30.dylib  libgraphite2.3.dylib  libharfbuzz.0.dylib  libhogweed.6.dylib  libhwy.1.dylib  libidn2.0.dylib  libintl.8.dylib  libjpeg.8.dylib  libjxl.0.11.dylib  libjxl_cms.0.11.dylib  (+58 more)
client/src/constant/: constant.go
client/src/event/: event.go
client/src/setup/: setup.go
client/src/websocket/: websocket.go
live_chat_app/: pubspec.yaml
live_chat_app/android/app/: build.gradle.kts
live_chat_app/ios/Runner/: Info.plist
live_chat_app/ios/Runner.xcodeproj/: project.pbxproj
live_chat_app/lib/: main.dart
live_chat_app/lib/src/: network_manager.dart
src/: errors.rs  main.rs  state.rs  templates.rs  utils.rs  video_processing.rs  websocket.rs
src/handlers/: media.rs  mod.rs  upload.rs
templates/: base.html  greet.html  index.html  media_container.html  media_content.html  upload.html
(+2 files in other folders)
