[package]
name = "homies_gaming_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
warp = "0.3"
askama = "0.12"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.4", features = ["trace"] }
bytes = "1.0"
serde_json = "1.0"
tokio-tungstenite = "0.20"
tungstenite = "0.20"